--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -124,3 +124,18 @@
     @apply bg-background text-foreground;
   }
 }
+
+.background-image::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: var(--background-image-url);
+  background-size: cover;
+  background-position: top;
+  background-repeat: no-repeat;
+  z-index: -1;
+  opacity: 0.3;
+}
